Added bespoke logo to theme admin and homepage

--- a/config/settings.html
+++ b/config/settings.html
@@ -187,6 +187,24 @@
 
 <fieldset>
   <legend>Homepage Setup</legend>
+
+  <h3>Bespoke homepage logo</h3>
+
+  <p> Displayed on upper right-hand side of Klurskin Homepage </p>
+
+  <table>
+
+    <tr>
+
+    <td><label for="home_image">Logo</label><br /></td>
+
+    <td><input type="file" name="home_custom_logo.png" id="home_custom_logo" data-max-width="1200" data-max-height="800" /></td>
+
+    </tr>
+
+
+  </table>
+
   <h3>Centered homepage content</h3>
   <table>
     <tr>
